--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 
     @media (min-width: 960px){
             --fs-lg:2.5rem;
-            --fs-md:1.4rem;
+            --fs-md:1.25rem;
             --fs-base:1rem;
         }
     
@@ -54,6 +54,7 @@ h2{
     font-size: var(--fs-md);
     font-weight:var(--fw-lg);
     line-height: 1;
+    margin-block-end:.5em;
 }
 .yellow-100{
     background-color: var(--Yellow-100);
@@ -75,6 +76,7 @@ main{
     gap:1rem;
     width:100%;
     max-width: 60rem;
+    margin-top: 1rem;
     padding-inline: 1rem;
     margin-inline: auto;
     grid-template-areas:
@@ -231,7 +233,8 @@ main{
     text-align: left;
 
     h2{
-        font-size:1.6rem;
+        font-size:1.5rem;
+        text-wrap: pretty;
     }
 
     img{
@@ -273,9 +276,11 @@ main{
         align-items:center;
         justify-content:center;
 
-        
+        h2{
+            font-size:2rem;
+        }
         img{
-            max-width: 100%;
+            max-width: 90%;
         }
         span{
             display:block;
@@ -293,6 +298,10 @@ main{
         margin-block-start: 1rem;
     }
     @media(width > 960px){
+
+        h2{
+            font-size:2rem;
+        }
         
         img{
             max-width:100%;
